Fixed login section not aligning vertically in IE/Firefox

--- a/client/app/login/login.less
+++ b/client/app/login/login.less
@@ -5,9 +5,8 @@
     left: 0;
     bottom: 0;
     margin: auto;
-    vertical-align: middle;
+    height: 30rem;
     width: 100%;
-    display: table;
     text-align: center;
     padding: 10px;
 
